--- a/xhh/package.json
+++ b/xhh/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.3",
+    "sharp": "^0.32.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
