--- a/xhh/package.json
+++ b/xhh/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^13.0.3",
     "sharp": "^0.32.4",
+    "slugify": "^1.6.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
