--- a/xhh/package.json
+++ b/xhh/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^13.0.3",
     "sharp": "^0.32.4",
     "slugify": "^1.6.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
