--- a/xhh/package.json
+++ b/xhh/package.json
@@ -19,14 +19,20 @@
     "intersection-observer": "^0.12.2",
     "next": "13.4.12",
     "next-i18next": "^14.0.0",
+    "next-seo": "^6.1.0",
+    "nodemailer": "^6.9.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-facebook": "^9.0.12",
     "react-i18next": "^13.0.3",
     "sharp": "^0.32.4",
     "slugify": "^1.6.6",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/nodemailer": "^6.4.9"
   }
 }
