--- a/xhh/package.json
+++ b/xhh/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/asset-utils": "^1.3.0",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/types": "^3.19.1",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
@@ -19,6 +22,7 @@
     "intersection-observer": "^0.12.2",
     "next": "13.4.12",
     "next-i18next": "^14.0.0",
+    "next-sanity": "^5.5.10",
     "next-seo": "^6.1.0",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.27",
