--- a/xhh/.env
+++ b/xhh/.env
@@ -2,3 +2,6 @@ EMAIL=khanhduycb1510@gmail.com
 RECIPIENT=kristalz139@gmail.com
 EMAIL_PASS=ilviulvzwljkwjwk
 
+GOOGLE_ID=849699188329-g3vtaq4f2bj4o1a91ku6k3o3r22k9aht.apps.googleusercontent.com
+GOOGLE_SECRET=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
+
