--- a/xhh/package.json
+++ b/xhh/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "@sanity/asset-utils": "^1.3.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3.19.1",
@@ -17,10 +21,12 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "axios": "^1.7.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "intersection-observer": "^0.12.2",
     "next": "13.4.12",
+    "next-auth": "^4.24.7",
     "next-i18next": "^14.0.0",
     "next-sanity": "^5.5.10",
     "next-seo": "^6.1.0",
@@ -31,6 +37,7 @@
     "react-facebook": "^9.0.12",
     "react-i18next": "^13.0.3",
     "react-slideshow-image": "^4.3.1",
+    "recoil": "^0.7.7",
     "sharp": "^0.32.4",
     "slugify": "^1.6.6",
     "tailwind-scrollbar-hide": "^1.1.7",
