--- a/xhh/.env
+++ b/xhh/.env
@@ -5,3 +5,4 @@ EMAIL_PASS=ilviulvzwljkwjwk
 GOOGLE_ID=849699188329-g3vtaq4f2bj4o1a91ku6k3o3r22k9aht.apps.googleusercontent.com
 GOOGLE_SECRET=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
 
+SECRET=Monte@2024
