--- a/xhh/tsconfig.json
+++ b/xhh/tsconfig.json
@@ -29,7 +29,7 @@
     "**/*.ts",
     "**/*.tsx",
     "next-sitemap.config.js"
-  ],
+, "webpack.config.js"  ],
   "exclude": [
     "node_modules"
   ]
