--- a/xhh/package.json
+++ b/xhh/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@portabletext/to-html": "^2.0.13",
     "@sanity/asset-utils": "^1.3.0",
     "@sanity/image-url": "^1.0.2",
     "@sanity/types": "^3.19.1",
@@ -20,11 +21,13 @@
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@uiw/react-markdown-preview": "^5.1.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.7.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "intersection-observer": "^0.12.2",
+    "markdown-it": "^14.1.0",
     "next": "13.4.12",
     "next-auth": "^4.24.7",
     "next-i18next": "^14.0.0",
@@ -37,6 +40,8 @@
     "react-export-table-to-excel": "^1.0.6",
     "react-facebook": "^9.0.12",
     "react-i18next": "^13.0.3",
+    "react-markdown": "^9.0.1",
+    "react-markdown-editor-lite": "^1.3.4",
     "react-slideshow-image": "^4.3.1",
     "recoil": "^0.7.7",
     "sharp": "^0.32.4",
@@ -46,6 +51,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/markdown-it": "^14.1.1",
     "@types/nodemailer": "^6.4.9"
   }
 }
