--- a/xhh/.env
+++ b/xhh/.env
@@ -1,5 +1,5 @@
 EMAIL=khanhduycb1510@gmail.com
-RECIPIENT=kristalz139@gmail.com
+RECIPIENT=['kristalz139@gmail.com','khanhduycb1510@gmail.com']
 EMAIL_PASS=ilviulvzwljkwjwk
 
 GOOGLE_ID=849699188329-g3vtaq4f2bj4o1a91ku6k3o3r22k9aht.apps.googleusercontent.com
